[maven-release-plugin] prepare release v0.1.0-RC1

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 <modelVersion>4.0.0</modelVersion>
 
 <groupId>org.rascalmpl</groupId>
 <artifactId>salix-contrib</artifactId>
-<version>0.1.0-SNAPSHOT</version>
+<version>0.1.0-RC1</version>
 
 <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -13,7 +12,7 @@
 
 <scm>
     <developerConnection>scm:git:ssh://git@github.com/usethesource/salix-contrib.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v0.1.0-RC1</tag>
 </scm>
 
 <repositories>
