--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>org.rascalmpl</groupId>
             <artifactId>salix-core</artifactId>
-            <version>0.2.0-RC1</version>
+            <version>0.2.0</version>
         </dependency>
     </dependencies>
 
