Fixed Rascal packager configuration

--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
                     </execution>
                     <execution>
                         <id>package</id>
-                        <phase>pre-package</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>package</goal>
                         </goals>
