--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.rascalmpl</groupId>
     <artifactId>salix-contrib</artifactId>
-    <version>0.2.8-RC2-SNAPSHOT</version>
+    <version>0.2.8</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -12,7 +12,7 @@
 
     <scm>
         <developerConnection>scm:git:ssh://git@github.com/usethesource/salix-contrib.git</developerConnection>
-        <tag>head</tag>
+        <tag>v0.2.8</tag>
     </scm>
 
     <repositories>
